--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
         <h3 class="text-center">Add a Gif Button</h3>
       </div>
 
-  <div id="gifs-appear-here">
-  </div>
+
       
       <br>
 
@@ -29,18 +28,21 @@
     <br>
 
     <!-- Movies will Get Dumped Dere -->
-    <div id="movies-view"></div>
+    <div id="gif-view"></div>
 
     <!-- Rendered Buttons will get Dumped Here  -->
     <div id="buttons-view"></div><br>
 
-      <form id="movie-form">
-      <label for="movie-input">Add More Gifs</label>
+      <form id="gif-form">
+      <label for="gif-input">Add More Gifs</label>
       <br>
-      <input type="text" id="movie-input"><br><br>
+      <input type="text" id="gif-input"><br><br>
 
-            <input id="add-movie" type="submit" value="Click to Add">
+            <input id="add-gif" type="submit" value="Click to Add">
     </form>
+
+      <div id="gifs-appear-here">
+      </div>
 
   </div>
 
