--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="container">
 
-      <br>
+    <br>
 
       <div class="jumbotron">
         <h1 class="text-center">GifTastic</h1>
@@ -21,28 +21,21 @@
       </div>
 
 
-      
-      <br>
+    <h1>Gif Search</h1><br>
 
-    <h1>Gif Search</h1>
-    <br>
 
-    <!-- Movies will Get Dumped Dere -->
-    <div id="gif-view"></div>
-
-    <!-- Rendered Buttons will get Dumped Here  -->
     <div id="buttons-view"></div><br>
 
       <form id="gif-form">
-      <label for="gif-input">Add More Gifs</label>
-      <br>
-      <input type="text" id="gif-input"><br><br>
+        <label for="gif-input">Add More Gifs</label>
+        <br>
+          <input type="text" id="gif-input"><br><br>
 
-            <input id="add-gif" type="submit" value="Click to Add">
-    </form>
+          <input id="add-gif" type="submit" value="Click to Add">
+    
+      </form>
 
-      <div id="gifs-appear-here">
-      </div>
+    <div id="gif-view"></div>
 
   </div>
 
